--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "css-loader": "^3.6.0",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "websocket-extensions": "^0.1.4"
   }
 }
